[project]
name = "Mind_Palace-AgenticAI"
version = "0.1.0"
description = "RAG based agentic AI. Uploads documents to vectordb and allows to query it through LLM prompts"
readme = "README.md"
authors = [
    { name = "Gautam Kadiresh", email = "gautamkadiresh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "pandas>=2.3.3",
    "typing>=3.10.0.0",
    "typing-extensions>=4.15.0",
]

[project.scripts] 
mind-palace= "mind_palace_agenticai:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
]

[tool.black]
line-length = 120
target-version = ['py312']
force-exclude = '''
/(
  uv.lock
  | pyproject.toml
  | LICENSE
  | README.md
  | .*ipynb
  | .gitignore
  | .*/__pycache__/.*
)
'''
